--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@react-three/drei": "^9.40.0",
     "@react-three/fiber": "^8.9.0",
+    "framer-motion": "^7.6.5",
     "glsl-random": "^0.0.5",
     "next": "^13.0.1",
     "next-pwa": "^5.6.0",
